# teacher_assistant_crewai

./: README.md
teacher_assistant_crewai/: .env.example  pyproject.toml  report.md
teacher_assistant_crewai/notes/: example_music_notes.txt
teacher_assistant_crewai/output/: lesson_plan.md  quiz.md  teaching_suggestions.md
teacher_assistant_crewai/src/teacher_assistant_crewai/: crew.py  main.py  ui.py
teacher_assistant_crewai/src/teacher_assistant_crewai/config/: agents.yaml  tasks.yaml
