[project]
name = "teacher_assistant_crewai"
version = "0.1.0"
description = "teacher_assistant_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.75.3",
]

[project.scripts]
teacher_assistant_crewai = "teacher_assistant_crewai.main:run"
run_crew = "teacher_assistant_crewai.main:run"
train = "teacher_assistant_crewai.main:train"
replay = "teacher_assistant_crewai.main:replay"
test = "teacher_assistant_crewai.main:test"
run_with_trigger = "teacher_assistant_crewai.main:run_with_trigger"
ui = "teacher_assistant_crewai.ui:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
